--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="default_notification_channel_id">new</string>
     <string name="default_notification_channel_name">News</string>
+    <string name="text_home">Home</string>
+    <string name="text_history">History</string>
+    <string name="text_meo">MEO</string>
+    <string name="text_noti">Notification</string>
+    <string name="text_social">Social</string>
 </resources>
