--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,11 @@
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="default_notification_channel_id">new</string>
     <string name="default_notification_channel_name">News</string>
-    <string name="text_home">Home</string>
-    <string name="text_history">History</string>
-    <string name="text_meo">MEO</string>
-    <string name="text_noti">Notification</string>
-    <string name="text_social">Social</string>
+    <string name="text_home">Trang chủ</string>
+    <string name="text_history">Thông báo</string>
+    <string name="text_meo">MeO</string>
+    <string name="text_noti">Nhiệm vụ</string>
+    <string name="text_social">Xã hội</string>
 
     <string name="facebook_app_id">201828170596445</string>
     <string name="fb_login_protocol_scheme">fb201828170596445</string>
