--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
 
     <string name="text_history">Lịch sử</string>
     <string name="text_meo">Meow</string>
-    <string name="text_noti">Thông báo</string>
+    <string name="text_noti">Khám phá</string>
     <string name="text_social">Xã hội</string>
 
     <string name="facebook_app_id">201828170596445</string>
@@ -26,5 +26,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="next">Tiếp tục</string>
+    <string name="skip">Bỏ qua</string>
+    <string name="start">Hoàn thành</string>
 
 </resources>
