--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="text_history">Lịch sử</string>
     <string name="text_meo">Meow</string>
     <string name="text_noti">Khám phá</string>
-    <string name="text_social">Xã hội</string>
+    <string name="text_social">Bạn bè</string>
 
     <string name="facebook_app_id">201828170596445</string>
     <string name="fb_login_protocol_scheme">fb201828170596445</string>
